version 0.9.4+
	* Added debug mode

version 0.9.4 Mon Apr 15 2013 by luispedro
	* Add CustomHash wrapper to set __jug_hash__
	* Print traceback on import error
	* Exit when no progress is made even with barrier
	* Use Tasklets for better jug.mapreduce.map
	* Use Ipython debugger if available (patch by Alex Ford)
	* Faster --aggressive-unload
	* Add currymap() function

version 0.9.3 Sun Dec 2 2012 by luispedro
	* Fix parsing of ports on redis URL (patch by Alcides Viamontes)
	* Make hashing robust to different orders when using randomized hashing
	(patch by Alcides Viamontes)
	* Allow regex in invalidate command (patch by Alcides Viamontes)
	* Add --cache --clear suboption to status
	* Allow builtin functions for tasks
	* Fix status --cache (a general bug which seems to be triggered mainly by
	bvalue() usage).
	* Fix CompoundTask (broken by earlier __jug_hash__ hook introduction)
	* Make Tasklets more flexible by allowing slicing with Tasks (previously,
	slicing with tasks was **not** allowed)

version 0.9.2 Sun Nov 4 2012 by luispedro
	* More flexible mapreduce()/map() functions
	* Make TaskGenerator pickle()able and hash()able
	* Add invalidate() method to Task
	* Add --keep-going option to execute
	* Better help messsage

version 0.9.1 Mon Jun 11 2012 by luispedro
	* Add --locks-only option to cleanup subcommand
	* Make cache file (for `status` subcommand) configurable
	* Add `webstatus` subcommand
	* Add bvalue() function
	* Fix bug in `shell` subcommand (`value` was not in global namespace)
	* Improve identity()
	* Fix bug in using Tasklets and --aggressive-unload
	* Fix bug with Tasklets and sleep-until/check

version 0.9 Mon Dec 5 2011 by luispedro
	* In the presence of a barrier(), rerun the jugfile
	* Add set_jugdir to public API
	* Added CompoundTaskGenerator
	* Support subclassing of Task
	* Avoid creating directories in file backend unless it is necessary
	* Add jug.mapreduce.reduce (which mimicks the builtin reduce)
