@@ -1,5 +1,6 @@
 version 0.9.4+
 	* Added debug mode
+	* Even better map.reduce.map using blocked access
 
 version 0.9.4 Mon Apr 15 2013 by luispedro
 	* Add CustomHash wrapper to set __jug_hash__
